--- a/rsa_test.ipynb
+++ b/rsa_test.ipynb
@@ -277,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "46.07142857142857"
+       "44.642857142857146"
       ]
      },
      "execution_count": 19,
@@ -288,6 +288,35 @@
    "source": [
     "diff = getAva(plain, uni, pub)\n",
     "diff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def percent_f(f):\n",
+    "    f = float(f)/100\n",
+    "    return '{:.2%}'.format(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 88.0\n",
+    "print(percent_f(x))"
    ]
   }
  ],
